--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-reveal": "^1.2.2",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
