--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
     "rewrites": [
         
            
-                { "source": "/(.*)", "destination": "/" }
+            { 
+                "source": "/(.*)", 
+                "destination": "/"
+             }
               
         
     ]
